--- a/CodeForU/templates/layout.html
+++ b/CodeForU/templates/layout.html
@@ -60,7 +60,18 @@
             </div>
             <a href="#" class="nav-item nav-link">Contact</a>
         </div>
-        <a href="{% url 'users:login' %}" class="btn custom-font btn-primary py-4 px-lg-5 d-none d-lg-block">Login<i class="fa fa-arrow-right ms-3"></i></a>        </div>
+        {% if user.is_authenticated %}  
+        <form action="{% url 'users:logout' %}" method="post">
+            {% csrf_token %}
+            <button class="btn custom-font btn-primary py-4 px-lg-5 d-none d-lg-block" title = "User Logout">Logout<i class="bi bi-box-arrow-in-right"></i></button> 
+       
+            
+        </form>
+        {% else  %}
+        <a href="{% url 'users:login' %}" class="btn custom-font btn-primary py-4 px-lg-5 d-none d-lg-block">Login<i class="fa fa-arrow-right ms-3"></i></a> 
+        
+        {% endif %}
+    </div>
 </nav>
     <main>
         {% block content %}
