--- a/CodeForU/users/templates/student_profile.html
+++ b/CodeForU/users/templates/student_profile.html
@@ -2,17 +2,16 @@
 {% load static %}
 
 {% block title %}
-Login
+Sign Up
 {% endblock %}
 
 {% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login</title>
+    <title>Register</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta naem="title" content="Student Profile"> 
     <!--===============================================================================================-->    
     <link rel="icon" type="image/png" href={% static "img/icons/favicon.ico" %}/>
     <!--===============================================================================================-->
@@ -21,58 +20,120 @@ Login
     <link rel="stylesheet" type="text/css" href={% static "css/util.css" %}>
     <link rel="stylesheet" type="text/css" href={% static "css/style.css" %}>
     <!--===============================================================================================-->
+    <script>
+        function enableEditing() {
+            document.getElementById('first_name').disabled = false;
+            document.getElementById('last_name').disabled = false;
+            document.getElementById('phone').disabled = false;
+            document.getElementById('email').disabled = false;
+            document.getElementById('editButton').style.display = 'none';
+            document.getElementById('submitButton').style.display = 'inline';
+            document.getElementById('cancelButton').style.display = 'inline';
+            document.getElementById('deleteButton').style.display = 'inline';
+
+        }
+
+        function cancelEditing() {
+            location.reload()
+        }
+        function confirmDelete(event) {
+            event.preventDefault(); // Prevent the form from submitting
+
+            if (confirm("Are you sure you want to delete the account?")) {
+                // If user confirms, continue with form submission
+                document.getElementById("deleteButton").value = "delete";  // Set action value
+                console.log("here")
+                document.getElementById("update-form").submit();
+            } else {
+                // If user cancels, do nothing
+            }
+        }
+    </script>
 </head>
 <body>
-    
-    <div class="limiter">
-        <div class="container-login100">
-            <div class="wrap-login100">
-                <div class="login100-pic js-tilt" data-tilt>
-                    <img src={% static "img/img11.png" %} alt="IMG">
-                    <img src={% static "img/codeforu2.png" %} alt="IMG">
+    <div class="page-wrapper bg-gra-02 p-t-130 p-b-100 font-poppins">
+        <div class="wrapper wrapper--w780" >
+            <div class="card card-4">
+                <div class="card-body">
+                    <h2 class="title">{{ student.first_name }} Profile</h2>
+                    <img src={% static  "img/logo.png" %} alt="IMG" class="logo">
+                    <form id="update-form" method="post">
+                        {% csrf_token %}
+                        <div class="row row-space">
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">First Name</label>
+                                    <input class="input--style-4" id="first_name" disabled type="text" name="first_name" value="{{ student.first_name }}" required>
+                                </div>
+                            </div>
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">Last Name</label>
+                                    <input type="hidden" name="user_id" value="{{ user.id }}">
+                                    <input class="input--style-4" id="last_name" disabled type="text" name="last_name" value="{{ student.last_name }}" required>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row row-space">
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">ID</label>
+                                    <input class="input--style-4" id="passport_id" disabled type="text" name="passport_id" value="{{ student.passport_id }}" >
+                                </div>
+                            </div>
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">Phone</label>
+                                    <input class="input--style-4" id="phone" disabled type="text" name="phone" value="{{ student.phone }}" required>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row row-space">
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">E-mail</label>
+                                    <input class="input--style-4" id="email" disabled type="email" name="email" value="{{ student.email }}" required>
+                                </div>
+                            </div>
+                            <div class="col-2">
+                                <div class="input-group" >
+                                    <label class="label">Birthday</label>
+                                    <input class="input--style-4" type="text" disabled name="birth_date" value="{{ student.birth_date }}">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row row-space">
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">Gender</label>
+                                    <input class="input--style-4" type="text" disabled name="gender" value="{{ student.gender }}">
+                                </div>
+                            </div>
+                            <div class="col-2 d-flex justify-content-between">
+                                <div class="input-group col-2">
+                                    <label class="label">Coding Level</label>
+                                    <input class="input--style-4" type="text" disabled name="level" value="{{ student.level }}">
+                                </div>
+                                <div class="input-group col-2 d-flex flex-column">
+                                    <label class="label">Ask for level up</label>
+                                    <button class="btn btn-primary px-4" style="background:#9954ae; border:none; border-radius:8px; font-weight:100;" type="button">Level up</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row row-space">
+                            <div class="col-2 d-flex ">
+                                <div class="input-group d-flex justify-content-between">
+                                    <button class="btn btn-primary px-4" style="background:#9954ae; border:none; border-radius:8px; font-weight:100;" id="editButton" onClick="enableEditing()" type="button">Edit</button>
+                                    <button class="btn btn-primary px-3" id="submitButton" style="border-radius:8px; font-weight:100; display:none;" type="submit" name="action" value="submit" >Submit</button>
+                                    <button class="btn btn-secondary px-3" id="cancelButton" style="border-radius:8px; font-weight:100; display:none;" type="button" onClick="cancelEditing()"  >Cancel</button><button class="btn btn-danger px-3" id="deleteButton" style="border-radius:8px; font-weight:100; display:none;" type="button" name="action" value="delete" onClick="confirmDelete(event)">Delete</button>                                    
+                                </div>
+                            </div>
+                    </form>
                 </div>
-
-                <form method="POST" action="{% url 'users:login' %}" class="login100-form validate-form">
-                    {% csrf_token %}
-                    <span class="login100-form-title">
-                        THIS IS PROFILE
-                    </span>
-
-                    <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                        <input class="input100" type="email" name="username" placeholder="Email">
-                        <span class="focus-input100"></span>
-                        <span class="symbol-input100">
-                            <i class="fa fa-envelope" aria-hidden="true"></i>
-                        </span>
-                    </div>
-
-                    <div class="wrap-input100 validate-input" data-validate="Password is required">
-                        <input class="input100" type="password" name="password" placeholder="Password">
-                        <span class="focus-input100"></span>
-                        <span class="symbol-input100">
-                            <i class="fa fa-lock" aria-hidden="true"></i>
-                        </span>
-                    </div>
-                    
-                    <div class="container-login100-form-btn">
-                        <button class="login100-form-btn" type="submit">
-                            Login
-                        </button>
-                    </div>
-
-                    <div class="text-center p-t-136">
-                        <a class="txt3" href="{% url 'users:register' %}">
-                            Create your Account
-                            <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                </form>
             </div>
         </div>
     </div>
-
     <script src={% static "js/main.js" %}></script>
-
 </body>
 </html>
 {% endblock %}
