--- a/CodeForU/templates/layout.html
+++ b/CodeForU/templates/layout.html
@@ -39,13 +39,13 @@
     <link href={% static "lib/owlcarousel/assets/owl.carousel.min.css" %}
     rel="stylesheet">
     <!-- Customized Bootstrap Stylesheet -->
-    <link href={% static "css/bootstrap.min.css" %} rel="stylesheet">
+    <link href={% static "css/bootstrap.min.css" %} rel="stylesheet"/>
 
     <!-- Template Stylesheet -->
-    <link href={% static "css/style.css" %}rel="stylesheet"> <link href={%
-    static "css/animate.css" %} rel="stylesheet"> <link href={% static
-    "css/chat.css" %} rel="stylesheet"> {% load bootstrap5 %} {% bootstrap_css
-    %} {% bootstrap_javascript %}
+    <link href={% static "css/style.css" %} rel="stylesheet"/> 
+    <link href={% static "css/animate.css" %} rel="stylesheet"/> 
+    <link href={% static "css/chat.css" %} rel="stylesheet"/> 
+    {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %}
   </head>
   <body>
     <nav
