Finished user story with all functionality and unit tests, also changed the student model

--- a/CodeForU/templates/layout.html
+++ b/CodeForU/templates/layout.html
@@ -148,6 +148,10 @@
           <a href="/chat/" class="nav-item nav-link">Add Question</a>
           <a href="/users/submit-help-request" class="nav-item nav-link">Requests</a>
           {% endif %}
+          {% if user.is_student %}
+          <a href="/users/student_mentor_request" class="nav-item nav-link">Requests</a>
+          {% endif %}
+
           <div class="nav-item dropdown">
             <a
               href="#"
