--- a/CodeForU/users/templates/login.html
+++ b/CodeForU/users/templates/login.html
@@ -1,7 +1,7 @@
 {% load static %}
 
-{% block title %}
 
+{% block title %}
 {% endblock %}
 
 {% block content %}
@@ -37,6 +37,8 @@
                         Login
                     </span>
 
+                    
+
                     <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
                         <input class="input100" type="email" name="username" placeholder="Email">
                         <span class="focus-input100"></span>
@@ -44,6 +46,7 @@
                             <i class="fa fa-envelope" aria-hidden="true"></i>
                         </span>
                     </div>
+                    
 
                     <div class="wrap-input100 validate-input" data-validate="Password is required">
                         <input class="input100" type="password" name="password" placeholder="Password">
@@ -52,6 +55,15 @@
                             <i class="fa fa-lock" aria-hidden="true"></i>
                         </span>
                     </div>
+                    {% if messages %}
+                        <div class="messages">
+                            {% for message in messages %}
+                                <div class="{% if message.tags %}{{ message.tags }}{% endif %}">
+                                    <span style="color:red; margin-left: 20px;"> {{ message }}</span>
+                                </div>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
                     
                     <div class="container-login100-form-btn">
                         <button class="login100-form-btn" type="submit">
@@ -70,7 +82,6 @@
         </div>
     </div>
     
-
     <script src={% static "js/main.js" %}></script>
 
 </body>
