--- a/CodeForU/static/css/style.css
+++ b/CodeForU/static/css/style.css
@@ -1491,6 +1491,7 @@ h6 {
   background: #3868cd;
 }
 
+/**/
 /* ==========================================================================
    #DATE PICKER
    ========================================================================== */
