--- a/CodeForU/static/css/style.css
+++ b/CodeForU/static/css/style.css
@@ -210,7 +210,7 @@ body {
 }
 
 .page-header {
-    background: linear-gradient(rgba(24, 29, 56, .7), rgba(24, 29, 56, .7)), url(../img/carousel-1.jpg);
+    background: blueviolet;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
