--- a/CodeForU/templates/layout.html
+++ b/CodeForU/templates/layout.html
@@ -46,9 +46,9 @@
     <link href={% static "css/animate.css" %} rel="stylesheet"/> 
     <link href={% static "css/chat.css" %} rel="stylesheet"/> 
     {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %}
-    
-<style>
-    .number-btn {
+
+    <style>
+      .number-btn {
         background-color: lightgray;
         color: black;
         border: 1px solid #ccc;
@@ -57,18 +57,18 @@
         font-size: 16px;
         cursor: pointer;
         outline: none;
-    }
+      }
 
-    .number-btn.active {
+      .number-btn.active {
         background-color: green;
         color: white;
-    }
+      }
 
-    .number-btn:hover {
+      .number-btn:hover {
         background-color: darkgray;
-    }
+      }
 
-    .unique-btn {
+      .unique-btn {
         display: inline-flex;
         align-items: center;
         background-color: #007bff;
@@ -79,46 +79,44 @@
         font-size: 14px;
         padding: 5px 10px;
         text-decoration: none;
-    }
+      }
 
-    .unique-btn:hover {
+      .unique-btn:hover {
         background-color: #0056b3;
-    }
+      }
 
-    .unique-icon {
+      .unique-icon {
         margin-left: 5px;
         border-radius: 3px;
         padding: 3px;
         transition: background-color 0.3s;
         font-size: 1em;
         line-height: 1;
-    }
+      }
 
-    .question-container {
+      .question-container {
         border: 1px solid #ddd;
         background-color: #f9f9f9;
         padding: 15px;
         margin-bottom: 20px;
         border-radius: 5px;
         transition: background-color 0.3s, box-shadow 0.3s;
-    }
+      }
 
-    .question-container:hover {
+      .question-container:hover {
         background-color: #e0e0e0;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    }
+      }
 
-    .task-type {
+      .task-type {
         font-weight: bold;
         margin-bottom: 10px;
-    }
+      }
 
-    p {
+      p {
         margin-top: 10px;
-    }
-</style>
-
-
+      }
+    </style>
   </head>
   <body>
     <nav
@@ -141,17 +139,26 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
           <a href="/" class="nav-item nav-link active">Home</a>
-          <a href="{% url 'users:questions_list' %}" class="nav-item nav-link">Questions</a>
+          <a href="{% url 'users:questions_list' %}" class="nav-item nav-link"
+            >Questions</a
+          >
           {% if user.is_mentor %}
           <a href="/chat/" class="nav-item nav-link">Add Question</a>
-          <a href="/users/submit-help-request" class="nav-item nav-link">Requests</a>
-          {% endif %}
-          {% if user.is_student %}
-          <a href="/users/student_mentor_request" class="nav-item nav-link">Requests</a>
-          {% endif %}
+          <a href="/users/submit-help-request" class="nav-item nav-link"
+            >Requests</a
+          >
+          <a href="/users/mentor_studentlist" class="nav-item nav-link"
+            >My Students</a
+          >
+          <a href="/users/mentor_profile" class="nav-item nav-link">Profile</a>
 
-          
-          
+          {% endif %} {% if user.is_student %}
+          <a href="/users/student_mentor_request" class="nav-item nav-link"
+            >Requests</a
+          >
+          <a href="/users/student_profile" class="nav-item nav-link">Profile</a>
+
+          {% endif %}
         </div>
         {% if user.is_authenticated %}
         <form action="{% url 'users:logout' %}" method="post">
