--- a/CodeForU/templates/layout.html
+++ b/CodeForU/templates/layout.html
@@ -161,11 +161,14 @@
           {% endif %}
         </div>
         {% if user.is_authenticated %}
-        <form action="{% url 'users:logout' %}" method="post">
+        <form id="logout-form" action="{% url 'users:logout' %}" method="post">
           {% csrf_token %}
           <button
+            type="button"
             class="btn custom-font btn-primary py-4 px-lg-5 d-none d-lg-block"
             title="User Logout"
+            data-bs-toggle="modal" 
+            data-bs-target="#logoutModal"
           >
             Logout<i class="bi bi-box-arrow-in-right"></i>
           </button>
@@ -180,6 +183,32 @@
         {% endif %}
       </div>
     </nav>
+
+        <!-- Logout Confirmation Modal -->
+        <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="logoutModalLabel">Logout Confirmation</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                Wow, you are already leaving? Are you sure you want to logout?
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                <button type="button" class="btn btn-primary" id="confirmLogout">Yes</button>
+              </div>
+            </div>
+          </div>
+        </div>
     <main>{% block content %} {% endblock %}</main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+      document.getElementById('confirmLogout').addEventListener('click', function() {
+        document.getElementById('logout-form').submit();
+      });
+    </script>
   </body>
 </html>
